--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.12.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcryptjs": "^3.0.2",
     "graphql": "^16.11.0",
     "mysql2": "^3.14.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.22"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^22.15.3",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
