--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - DB_PORT=3306
     volumes:
       - .:/usr/src/app
-      - /usr/src/app/node_modules
+      # - /usr/src/app/node_modules
     depends_on:
       - mysql
   mysql:
