--- a/server/package.json
+++ b/server/package.json
@@ -15,13 +15,16 @@
   "dependencies": {
     "@apollo/server": "^4.12.0",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
     "graphql": "^16.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.22"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.3",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
