--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -16,6 +16,10 @@ services:
       - DB_PASSWORD=admin
       - DB_NAME=friendzone
       - DB_PORT=3306
+      - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}
+      - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}
+    env_file:
+      - .env
     volumes:
       - .:/usr/src/app
       # - /usr/src/app/node_modules
