--- a/server/package.json
+++ b/server/package.json
@@ -23,14 +23,12 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.22",
-    "uuid": "^11.1.0"
+    "typeorm": "^0.3.22"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.3",
-    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
