--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.5.3",
     "tailwind-merge": "^3.2.0",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
